--- a/app/globals.css
+++ b/app/globals.css
@@ -39,3 +39,13 @@ body {
 .profile-box-shadow {
   box-shadow: -5px 5px 0px black;
 }
+
+.swiper-button-prev,
+.swiper-button-next {
+  color: gray !important; /* Warna abu */
+}
+
+.swiper-button-prev:hover,
+.swiper-button-next:hover {
+  color: black !important; /* Warna hitam saat hover */
+}
